footer section finished

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,61 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="robots" content="index, follow">
+    <meta name="description" content="Heladeria Olaf: Helado dulce de tu vida">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olaf Ice Cream</title>
+
+    <link rel="shortcut icon" href="https://postimg.cc/2VN2Mk2L" type="image/x-icon">
+    <link rel="stylesheet" href="../styles/style.css">
 </head>
 <body>
-    <footer>
-        <div></div>
-        <div></div>
+    <footer class="footer">
+        <section class="footer-news-form">
+            <div class="footer-news">
+                <p>ORDER NOW</p>
+                <p class="footer-news__p--big">Choose your Ice Cream</p>
+                <p>Flat 20% Offer</p>
+            </div>
+            <div class="footer-form__container">
+                <form action="#" class="footer-form">
+                    <label for="name">
+                        <input type="text" name="name" id="name" placeholder="Name">
+                    </label>
+                    <label for="email">
+                        <input type="email" name="email" id="email" placeholder="Email">
+                    </label>
+                    <input type="submit" value="SEND">
+                </form>
+                <div class="footer-nav">
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Collection</a></li>
+                        <li><a href="#">Shop</a></li>
+                        <li><a href="#">Natural</a></li>
+                        <li><a href="#">Regular</a></li>
+                        <li><a href="#">Exotic</a></li>
+                        <li><a href="#">Pages</a></li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
+        <section class="footer-bottom">
+            <div class="footer-bottom-icons-payment">
+                <ul>
+                    <li><a href="#"><img src="https://i.postimg.cc/tRVnDdWx/card-icons5.png" alt="payment_icon_1"></a></li>
+                    <li><a href="#"><img src="https://i.postimg.cc/Hk3rj6Df/card-icons4.png" alt="payment_icon_2"></a></li>
+                    <li><a href="#"><img src="https://i.postimg.cc/nhnsH654/card-icons3.png" alt="payment_icon_3"></a></li>
+                    <li><a href="#"><img src="https://i.postimg.cc/PrWpnt6f/card-icons2.png" alt="payment_icon_4"></a></li>
+                    <li><a href="#"><img src="https://i.postimg.cc/TYMLsyJH/card-iconspng.png" alt="payment_icon_5"></a></li>
+                </ul>
+            </div>
+            <div class="footer-bottom-logo">
+                <a href="#"><img src="https://i.postimg.cc/kX9FLhnS/logo-footer.png" alt="Olaf Logo Icy"></a>
+            </div>
+            <p class="footer-bottom__p">Copyright © 2021, <a href="#">Olaf Heladeria</a></p>
+        </section>
     </footer>
 </body>
 </html>
