Header section of Tranding products finished

--- a/src/index.html
+++ b/src/index.html
@@ -10,12 +10,35 @@
 <body>
     <section class="trending-products">
         <header class="trending-products--header">
-            <img src="https://i.postimg.cc/Qtq637SB/icon-trending-Products.png" alt="">
-            <h2>Trending Products</h2>
-            <ul>
-                <li>Butter Scotch</li>
-                <li>Blue Moon</li>
-                <li>Butter Pecan</li>
+            <div class="trending-products--header__wrapper-img">
+                <img src="https://i.postimg.cc/Qtq637SB/icon-trending-Products.png" alt="">
+            </div>
+            <h2 class="trending-products--header__title">Trending Products</h2>
+            <ul class="trending-products--header__categories">
+                <li>
+                    <a href="#">
+                        <div class="firstCategory">
+                            <img src="https://i.postimg.cc/gcCG2SFF/blue-loading.png" alt="" class="loadingAnimation">
+                            <span>Butter Scotch</span>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div class="secondCategory">
+                            <img src="https://i.postimg.cc/xTLnJvnk/pink-loading.png" alt="" class="loadingAnimation">
+                            <span>Blue Moon</span>
+                        </div>
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        <div  class="thirdCategory">
+                            <img src="https://i.postimg.cc/CxYYjRxc/sandal-loading.png" alt="" class="loadingAnimation">
+                            <span>Butter Pecan</span>
+                        </div>
+                    </a>
+                </li>
             </ul>
         </header>
         <div class="trending-products--grid">
