trabajando en submenus

--- a/src/header.html
+++ b/src/header.html
@@ -56,50 +56,213 @@
       </div>
       <div id="header-component2" class="todo">
         <div id="component2">
-          <ul>
-            <a href="#"><li class="icon-nav"><div class="hover-letter1">Home</div></li></a>
-            <a href="#">
-              <li class="icon-nav">
-                <div class="hover-letter1">
+          <ul class="menuNav">
+              <li class="icon-nav"><a href="#"><div class="hover-letter1 ajust">Home</div></a></li>
+              <li class="icon-nav hoverCollection">
+                <a href="#"><div class="hover-letter1 ajust">
                   Collection<span class="style-arrows hover-letter1"></span>
+                </div></a>
+                <div id="menuCollection" class="component2MenuStyle">
+                  <ul class="columnBlock">
+                    <li>Vainilla</li>
+                    <li><a href="#">Caro</a></li>
+                    <li><a href="#">Crow</a></li>
+                    <li><a href="#">Ossoro</a></li>
+                    <li><a href="#">Sprig</a></li>
+                    <li><a href="#">Malvis</a></li>
+                  </ul>
+                  <ul class="columnBlock">
+                    <li>Mango</li>
+                    <li><a href="#">Moments</a></li>
+                    <li><a href="#">Five stars</a></li>
+                    <li><a href="#">Bird in blue</a></li>
+                    <li><a href="#">Cool mango</a></li>
+                    <li><a href="#">Gardening</a></li>
+                  </ul>
+                  <ul class="columnBlock">
+                    <li>Kulffi</li>
+                    <li><a href="#">Parle</a></li>
+                    <li><a href="#">H-store</a></li>
+                    <li><a href="#">Navisha</a></li>
+                    <li><a href="#">Gits</a></li>
+                    <li><a href="#">Moments</a></li>
+                  </ul>
+                  <div  class="columnBlock">
+                    <a href="#">
+                      <img class="imgSubMenu" src="https://i.postimg.cc/dVY0tgY2/img-submenu1.jpg">
+                    </a>
+                  </div> 
                 </div>
               </li>
-            </a>
-            <a href="#">
-              <li class="icon-nav">
-                <div class="hover-letter1">
+              <li class="icon-nav hoverCollection">
+                <a href="#"><div class="hover-letter1 ajust">
                   Shop<span class="style-arrows hover-letter1"></span>
+                </div></a>
+                <div id="menuShop" class="component2MenuStyle">
+                  <ul class="columnBlock">
+                    <li>Cones</li>
+                    <li><a href="#">Waffle cone</a></li>
+                    <li><a href="#">Chocolate</a></li>
+                    <li><a href="#">Cowl</a></li>
+                    <li><a href="#">Sprinkle</a></li>
+                    <li><a href="#">Sugar</a></li>
+                  </ul>
+                  <ul class="columnBlock">
+                    <li>Candy</li>
+                    <li><a href="#">Italic ice</a></li>
+                    <li><a href="#">Persian ice</a></li>
+                    <li><a href="#">Classic vanilla</a></li>
+                    <li><a href="#">Cool mango</a></li>
+                    <li><a href="#">Sherbet</a></li>
+                  </ul>
+                  <ul class="columnBlock">
+                    <li>Tall cup</li>
+                    <li><a href="#">Vanilla</a></li>
+                    <li><a href="#">Kesar king</a></li>
+                    <li><a href="#">Rose special</a></li>
+                    <li><a href="#">Gits</a></li>
+                    <li><a href="#">Real mango</a></li>
+                  </ul>
+                  <div  class="columnBlock">
+                    <a href="#">
+                      <img class="imgSubMenu" src="https://i.postimg.cc/JhnrCGw0/img-submenu2.jpg">
+                    </a>
+                  </div>
                 </div>
               </li>
-            </a>
-            <a href="#">
-              <li class="icon-nav">
-                <div class="hover-letter1">
+              <li class="icon-nav hoverCollection">
+                <a href="#"><div class="hover-letter1 ajust">
                   Natural<span class="style-arrows hover-letter1"></span>
+                </div></a>
+                <div id="menuNatural" class="component2MenuStyle">
+                  <ul class="columnBlock">
+                    <li>Cones</li>
+                    <li><a href="#">Waffle cone</a></li>
+                    <li><a href="#">Chocolate</a></li>
+                    <li><a href="#">Cowl</a></li>
+                    <li><a href="#">Sprinkle</a></li>
+                    <li><a href="#">Sugar</a></li>
+                  </ul>
+                  <ul class="columnBlock">
+                    <li>Candy</li>
+                    <li><a href="#">Italic ice</a></li>
+                    <li><a href="#">Persian ice</a></li>
+                    <li><a href="#">Classic vanilla</a></li>
+                    <li><a href="#">Cool mango</a></li>
+                    <li><a href="#">Sherbet</a></li>
+                  </ul>
+                  <ul class="columnBlock">
+                    <li>Tall cup</li>
+                    <li><a href="#">Vanilla</a></li>
+                    <li><a href="#">Kesar king</a></li>
+                    <li><a href="#">Rose special</a></li>
+                    <li><a href="#">Gits</a></li>
+                    <li><a href="#">Real mango</a></li>
+                  </ul>
+                  <div  class="columnBlock">
+                    <a href="#">
+                      <img class="imgSubMenu" src="https://i.postimg.cc/Gh5czCgG/img-submenu3.jpg">
+                    </a>
+                  </div>
                 </div>
               </li>
-            </a>
-            <a href="#">
-              <li class="icon-nav">
-                <div class="hover-letter1">
+              <li class="icon-nav hoverCollection">
+                <a href="#"><div class="hover-letter1 ajust">
                   Regular<span class="style-arrows hover-letter1"></span>
-                </div>
-              </li>
-            </a>
-            <a href="#">
-              <li class="icon-nav">
-                <div class="hover-letter1">
+                </div></a>
+                <div id="menuRegular" class="component2MenuStyle">
+                  <ul class="columnBlock">
+                    <li>Sugarfree</li>
+                    <li><a href="#">Waffle cone</a></li>
+                    <li><a href="#">Chocolate</a></li>
+                    <li><a href="#">Cowl</a></li>
+                    <li><a href="#">Sprinkle</a></li>
+                    <li><a href="#">Sugar</a></li>
+                  </ul>
+                  <ul class="columnBlock">
+                    <li>Juice</li>
+                    <li><a href="#">Italic ice</a></li>
+                    <li><a href="#">Persian ice</a></li>
+                    <li><a href="#">Classic vanilla</a></li>
+                    <li><a href="#">Cool mango</a></li>
+                    <li><a href="#">Sherbet</a></li>
+                  </ul>
+                  <ul class="columnBlock">
+                    <li>Bollys</li>
+                    <li><a href="#">Vanilla</a></li>
+                    <li><a href="#">Kesar king</a></li>
+                    <li><a href="#">Rose special</a></li>
+                    <li><a href="#">Gits</a></li>
+                    <li><a href="#">Real mango</a></li>
+                  </ul>
+                  <ul class="columnBlock">
+                    <li>Chocolate</li>
+                    <li><a href="#">Vanilla</a></li>
+                    <li><a href="#">Kesar king</a></li>
+                    <li><a href="#">Rose special</a></li>
+                    <li><a href="#">Gits</a></li>
+                    <li><a href="#">Real mango</a></li>
+                   </ul>
+                 </div>
+               </li>
+              <li class="icon-nav hoverCollection">
+                <a href="#"><div class="hover-letter1 ajust">
                   Exotic<span class="style-arrows hover-letter1"></span>
+                </div></a>
+                <div id="menuExotic" class="component2MenuStyle">
+                  <ul class="columnBlock">
+                    <li>Creamy</li>
+                    <li><a href="#">Waffle cone</a></li>
+                    <li><a href="#">Chocolate</a></li>
+                    <li><a href="#">Cowl</a></li>
+                    <li><a href="#">Sprinkle</a></li>
+                    <li><a href="#">Sugar</a></li>
+                  </ul>
+                  <ul class="columnBlock">
+                    <li>Dry fruits</li>
+                    <li><a href="#">Italic ice</a></li>
+                    <li><a href="#">Persian ice</a></li>
+                    <li><a href="#">Classic vanilla</a></li>
+                    <li><a href="#">Cool mango</a></li>
+                    <li><a href="#">Sherbet</a></li>
+                  </ul>
+                  <ul class="columnBlock">
+                    <li>Homemade</li>
+                    <li><a href="#">Vanilla</a></li>
+                    <li><a href="#">Kesar king</a></li>
+                    <li><a href="#">Rose special</a></li>
+                    <li><a href="#">Gits</a></li>
+                    <li><a href="#">Real mango</a></li>
+                  </ul>
+                  <ul class="columnBlock">
+                    <li>snackes</li>
+                    <li><a href="#">Vanilla</a></li>
+                    <li><a href="#">Kesar king</a></li>
+                    <li><a href="#">Rose special</a></li>
+                    <li><a href="#">Gits</a></li>
+                    <li><a href="#">Real mango</a></li>
+                  </ul>
+                  <div  class="columnBlock">
+                    <a href="#">
+                      <img class="imgSubMenu" src="https://i.postimg.cc/zBSNhdfc/img-submenu4.jpg">
+                      <img class="imgSubMenu" src="https://i.postimg.cc/zBSNhdfc/img-submenu4.jpg">
+                    </a>
+                  </div>
                 </div>
               </li>
-            </a>
-            <a href="#">
-              <li class="icon-nav">
-                <div class="hover-letter1">
+              <li class="icon-nav hoverCollection">
+                <a href="#"><div class="hover-letter1 ajust">
                   Pages<span class="style-arrows hover-letter1"></span>
+                </div></a>
+                <div id="menuPages" class="component2MenuStyle">
+                  <ul class="columnBlock">
+                    <li>Info</li>
+                    <li><a href="#">About us</a></li>
+                    <li><a href="#">Contac us</a></li>
+                    <li><a href="#">Blog</a></li>
+                  </ul>
                 </div>
               </li>
-            </a>
           </ul>
         </div>
       </div>
