trabajando en select lenguage

--- a/src/header.html
+++ b/src/header.html
@@ -36,8 +36,11 @@
 	      <a class="hola2" href="#"><li class="icon-header">
 	        
 	          <div class="hover-letter">
-	            USD
-	            <span class="style-ico icon-lenguage hover-letter"></span>
+	            <select class="hover-letter" name="lenguage" id="lenguage">
+	              <option value="USD">USD</option>
+	              <option value="EUR">EUR</option>
+	              <option value="JPY">JPY</option>
+	            </select>
 	          </div> 
 	      </li></a>
 	    </ul>
