agregando section clients say

--- a/src/index.html
+++ b/src/index.html
@@ -396,6 +396,34 @@
                 <!-- Helados -->
             </div>
         </section>
+        <div id="the-clients-say">
+          <div id="component-client-say">
+            <div id="first-img-clients-say"><img src="https://i.postimg.cc/wvcr0Vzz/icon-postre.png"></div>
+            <div id="text1-clients-say">Clients Are Saying</div>
+            <div class="quotes-clients-say"></div>
+            <div class="slider-container">
+              <div class="slider-elements">
+                <div class="text2-clients-say">
+                  Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
+                  Donec quam felis, ultricies  nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. 
+                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a,
+                  venenatisvit
+                </div>
+                <div class="details-author"><img src="https://i.postimg.cc/BQPtgZ7p/client-say.jpg">
+                  <div>
+                    <h3>Ruthie Moores</h3>
+                    <h5>Designer</h5>
+                  </div>
+                </div>
+                <div class="options-clients-say">
+                  <a href="#"><div></div></a>
+                  <a href="#"><div></div><a>
+                </div>
+              </div>           
+            </div>
+            <div id="space-around"></div>
+          </div>
+        </div>
     </main>
 
     <footer class="footer">
