Agregando js y configurando css en section client say

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
   
     <script defer src="https://kit.fontawesome.com/9df941a2d1.js" crossorigin="anonymous"></script>
     <script defer src="../js/slider.js"></script>
+    <script defer src="../js/slider_clientsay.js"></script>
 </head>
 <body>
     <header>
@@ -396,34 +397,51 @@
                 <!-- Helados -->
             </div>
         </section>
-        <div id="the-clients-say">
-          <div id="component-client-say">
-            <div id="first-img-clients-say"><img src="https://i.postimg.cc/wvcr0Vzz/icon-postre.png"></div>
-            <div id="text1-clients-say">Clients Are Saying</div>
-            <div class="quotes-clients-say"></div>
-            <div class="slider-container">
-              <div class="slider-elements">
-                <div class="text2-clients-say">
-                  Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
-                  Donec quam felis, ultricies  nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. 
-                  Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a,
-                  venenatisvit
+    <div id="the-clients-say">
+      <div id="component-client-say">
+        <div id="first-img-clients-say"><img src="https://i.postimg.cc/wvcr0Vzz/icon-postre.png"></div>
+        <div id="text1-clients-say">Clients Are Saying</div>
+        <div class="quotes-clients-say"></div>
+        <div class="slider-container">
+          <div id="slider-adjust">
+            <div class="slider-elements">
+              <div class="text2-clients-say">
+                Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
+                Donec quam felis, ultricies  nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. 
+                Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vit
+              </div>
+              <div class="details-author"><img src="https://i.postimg.cc/BQPtgZ7p/client-say.jpg">
+                <div>
+                  <h3>Ruthie Moores</h3>
+                  <h5>Designer</h5>
                 </div>
-                <div class="details-author"><img src="https://i.postimg.cc/BQPtgZ7p/client-say.jpg">
-                  <div>
-                    <h3>Ruthie Moores</h3>
-                    <h5>Designer</h5>
-                  </div>
+              </div>
+            </div> 
+            <div class="slider-elements">
+              <div class="text2-clients-say">
+                Donec quam felis, ultricies  nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. 
+                Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. 
+                Pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vit
+              </div>
+              <div class="details-author"><img src="https://i.postimg.cc/wvcr0Vzz/icon-postre.png">
+                <div>
+                  <h3>Ruthie Moores</h3>
+                  <h5>Designer</h5>
                 </div>
-                <div class="options-clients-say">
-                  <a href="#"><div></div></a>
-                  <a href="#"><div></div><a>
-                </div>
-              </div>           
+              </div>
             </div>
-            <div id="space-around"></div>
-          </div>
+           <div id="restaurar"></div>
+           <div id="restaurar"></div>
+          </div> 
+                     
         </div>
+        <div class="options-clients-say">
+          <a><div id="user1"></div></a>
+          <a><div id="user2"></div><a>
+        </div>
+        <div id="space-around"></div>
+      </div>
+    </div>      
     </main>
 
     <footer class="footer">
