--- a/src/index.html
+++ b/src/index.html
@@ -19,6 +19,7 @@
     <script defer src="https://kit.fontawesome.com/9df941a2d1.js" crossorigin="anonymous"></script>
     <script defer src="../js/slider.js"></script>
     <script defer src="../js/slider_clientsay.js"></script>
+    <script defer src="../js/menu_lateral.js"></script>
 </head>
 <body>
     <header>
@@ -27,7 +28,7 @@
             <div id="buscar-lenguage">
               <ul id="items1">
                 <li class="icon-header">
-                  <a href="#">
+                  <a class="probando" href="#">
                     <div class="hover-letter">
                       <span class="style-ico icon-list hover-letter"></span>
                     </div>
@@ -85,6 +86,7 @@
         <div id="header-component2">
           <div id="component2">
             <ul class="menuNav">
+              <li><a><div class="close-x">X</div></a></li>
               <li class="icon-nav">
                 <a href="#"><div class="hover-letter1 ajust">Home</div>
                 </a>
